import uuid

from django.conf import settings
from django.core.exceptions import ValidationError
from django.db import models
from django.db.models import Q

from common.models import TimeStampedModel
from expenses.models import ExpenseCategory, ExpenseReport
from expenses.services.money import validate_currency
from users.models import OrgAttribute, User, org_attribute_errors


class ApprovalRule(TimeStampedModel):
    """Routes a report to a pool of approvers when one of its expenses matches.

    Every criterion is optional except currency: a NULL foreign key or role means
    "any". Expense criteria are evaluated per expense with the same semantics as
    ``WarningRule`` (the threshold must be strictly below the expense amount).
    """

    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    name = models.CharField(max_length=120)
    active = models.BooleanField(default=True)
    priority = models.PositiveIntegerField(default=100)

    category = models.ForeignKey(
        ExpenseCategory,
        on_delete=models.PROTECT,
        related_name="approval_rules",
        null=True,
        blank=True,
    )
    currency = models.CharField(max_length=3)
    threshold_minor = models.BigIntegerField(default=0)

    submitter_location = models.ForeignKey(
        OrgAttribute,
        on_delete=models.PROTECT,
        related_name="approval_rules_by_submitter_location",
        null=True,
        blank=True,
    )
    submitter_department = models.ForeignKey(
        OrgAttribute,
        on_delete=models.PROTECT,
        related_name="approval_rules_by_submitter_department",
        null=True,
        blank=True,
    )
    submitter_position = models.ForeignKey(
        OrgAttribute,
        on_delete=models.PROTECT,
        related_name="approval_rules_by_submitter_position",
        null=True,
        blank=True,
    )

    # NULL is meaningful here: it is the "any role" wildcard, distinct from an empty string.
    approver_role = models.CharField(  # noqa: DJ001
        max_length=16,
        choices=[
            (User.Role.APPROVER, User.Role.APPROVER.label),
            (User.Role.ADMIN, User.Role.ADMIN.label),
        ],
        null=True,
        blank=True,
    )
    approver_location = models.ForeignKey(
        OrgAttribute,
        on_delete=models.PROTECT,
        related_name="approval_rules_by_approver_location",
        null=True,
        blank=True,
    )
    approver_department = models.ForeignKey(
        OrgAttribute,
        on_delete=models.PROTECT,
        related_name="approval_rules_by_approver_department",
        null=True,
        blank=True,
    )
    approver_position = models.ForeignKey(
        OrgAttribute,
        on_delete=models.PROTECT,
        related_name="approval_rules_by_approver_position",
        null=True,
        blank=True,
    )

    ORG_ATTRIBUTE_FIELDS = {
        "submitter_location": OrgAttribute.Dimension.LOCATION,
        "submitter_department": OrgAttribute.Dimension.DEPARTMENT,
        "submitter_position": OrgAttribute.Dimension.POSITION,
        "approver_location": OrgAttribute.Dimension.LOCATION,
        "approver_department": OrgAttribute.Dimension.DEPARTMENT,
        "approver_position": OrgAttribute.Dimension.POSITION,
    }

    class Meta:
        ordering = ["priority", "name", "id"]
        constraints = [
            models.CheckConstraint(
                condition=Q(threshold_minor__gte=0),
                name="approval_rule_threshold_nonnegative",
            ),
        ]
        indexes = [
            models.Index(
                fields=["active", "currency", "category"],
                name="approval_rule_lookup_idx",
            ),
            models.Index(fields=["priority"], name="approval_rule_priority_idx"),
        ]

    def clean(self):
        super().clean()
        errors = {}
        try:
            self.currency = validate_currency(self.currency)
        except (TypeError, ValueError) as exc:
            errors["currency"] = str(exc)
        self.name = self.name.strip()
        if not self.name:
            errors["name"] = "Rule name cannot be empty."
        errors.update(org_attribute_errors(self, fields=self.ORG_ATTRIBUTE_FIELDS))
        if errors:
            raise ValidationError(errors)

    def __str__(self) -> str:
        return self.name


class ApprovalStep(TimeStampedModel):
    """One position in a report's approval chain, decidable by any of its candidates."""

    class Status(models.TextChoices):
        PENDING = "PENDING", "Pending"
        APPROVED = "APPROVED", "Approved"
        REJECTED = "REJECTED", "Rejected"
        SKIPPED = "SKIPPED", "Skipped"

    class Origin(models.TextChoices):
        RULE = "RULE", "Generated by rule"
        MANUAL = "MANUAL", "Assigned by admin"
        DELEGATED = "DELEGATED", "Delegated"

    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    report = models.ForeignKey(
        ExpenseReport,
        on_delete=models.CASCADE,
        related_name="approval_steps",
    )
    step_order = models.PositiveIntegerField()
    status = models.CharField(max_length=16, choices=Status.choices, default=Status.PENDING)
    origin = models.CharField(max_length=16, choices=Origin.choices, default=Origin.MANUAL)
    rule = models.ForeignKey(
        ApprovalRule,
        on_delete=models.SET_NULL,
        related_name="approval_steps",
        null=True,
        blank=True,
    )
    decided_by = models.ForeignKey(
        settings.AUTH_USER_MODEL,
        on_delete=models.PROTECT,
        related_name="approval_decisions",
        null=True,
        blank=True,
    )
    decided_at = models.DateTimeField(null=True, blank=True)
    comment = models.TextField(null=True, blank=True)  # noqa: DJ001

    class Meta:
        ordering = ["step_order"]
        constraints = [
            models.CheckConstraint(
                condition=Q(step_order__gt=0),
                name="approval_step_order_positive",
            ),
            models.UniqueConstraint(
                fields=["report", "step_order"],
                name="approval_step_report_order_unique",
            ),
        ]
        indexes = [
            models.Index(
                fields=["report", "step_order"],
                name="approval_step_report_order_idx",
            ),
        ]

    @property
    def approvers(self):
        return [candidate.user for candidate in self.candidates.all()]

    def __str__(self) -> str:
        return f"Step {self.step_order} — {self.report_id}"


class ApprovalStepCandidate(models.Model):
    """A user eligible to decide a step. Any single candidate's decision settles it."""

    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    step = models.ForeignKey(
        ApprovalStep,
        on_delete=models.CASCADE,
        related_name="candidates",
    )
    user = models.ForeignKey(
        settings.AUTH_USER_MODEL,
        on_delete=models.PROTECT,
        related_name="approval_candidacies",
    )
    created_at = models.DateTimeField(auto_now_add=True)

    class Meta:
        ordering = ["user__full_name", "user__email"]
        constraints = [
            models.UniqueConstraint(
                fields=["step", "user"],
                name="approval_step_candidate_unique",
            ),
        ]
        indexes = [
            models.Index(fields=["user"], name="approval_candidate_user_idx"),
        ]

    def __str__(self) -> str:
        return f"{self.user_id} — step {self.step_id}"

    def clean(self):
        super().clean()
        if not self.user_id or not self.step_id:
            return
        errors = {}
        candidate = (
            self.user
            if "user" in self._state.fields_cache
            else User.objects.filter(pk=self.user_id).values("is_active", "role").first()
        )
        if isinstance(candidate, User):
            is_active, role = candidate.is_active, candidate.role
        elif candidate:
            is_active, role = candidate["is_active"], candidate["role"]
        else:
            is_active, role = False, None
        if not is_active:
            errors["user"] = "Approver must be active."
        elif role not in {User.Role.APPROVER, User.Role.ADMIN}:
            errors["user"] = "Approver must have the approver or admin role."

        owner_id = (
            ExpenseReport.objects.filter(approval_steps__id=self.step_id)
            .values_list("user_id", flat=True)
            .first()
        )
        if owner_id == self.user_id:
            errors["user"] = "The report owner cannot approve their own report."
        if errors:
            raise ValidationError(errors)


class ApprovalEvent(models.Model):
    class Action(models.TextChoices):
        SUBMITTED = "SUBMITTED", "Submitted"
        APPROVED = "APPROVED", "Approved"
        AUTO_APPROVED = "AUTO_APPROVED", "Auto approved"
        REJECTED = "REJECTED", "Rejected"
        DELEGATED = "DELEGATED", "Delegated"
        COMMENTED = "COMMENTED", "Commented"
        RETURNED_TO_DRAFT = "RETURNED_TO_DRAFT", "Returned to draft"
        PAID = "PAID", "Paid"

    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    report = models.ForeignKey(
        ExpenseReport,
        on_delete=models.CASCADE,
        related_name="approval_events",
    )
    actor = models.ForeignKey(
        settings.AUTH_USER_MODEL,
        on_delete=models.PROTECT,
        related_name="approval_events",
    )
    action = models.CharField(max_length=24, choices=Action.choices)
    comment = models.TextField(null=True, blank=True)  # noqa: DJ001
    created_at = models.DateTimeField(auto_now_add=True)

    class Meta:
        ordering = ["created_at", "id"]
        indexes = [
            models.Index(
                fields=["report", "created_at"],
                name="approval_event_report_idx",
            ),
            models.Index(
                fields=["actor", "created_at"],
                name="approval_event_actor_idx",
            ),
        ]

    def __str__(self) -> str:
        return f"{self.action} — {self.report_id}"
